// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box should match snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  min-width: 0;
}

<div
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`Flex should match snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;
